# projetoMontanna

./: .gitignore  README.md
backEnd/: .gitignore
python/projetoMontannaTef/: meson.build  org.example.App.json
python/projetoMontannaTef/src/: main.py  meson.build  projetomontannatef.in  window.py  window.ui
